--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,16 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.9",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.52",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.3",
-        "pestphp/pest-plugin-laravel": "^4.0"
+        "pestphp/pest-plugin-laravel": "^4.0",
+        "phpstan/phpstan": "^2.1",
+        "tpetry/laravel-postgresql-enhanced": "^3.5"
     },
     "autoload": {
         "psr-4": {
@@ -72,7 +75,8 @@
         ],
         "pre-package-uninstall": [
             "Illuminate\\Foundation\\ComposerScripts::prePackageUninstall"
-        ]
+        ],
+        "phpstan": "./vendor/bin/phpstan analyse -c phpstan.dist.neon --memory-limit=512M"
     },
     "extra": {
         "laravel": {
