--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,22 @@ services:
         depends_on:
             - pgsql
             - minio
+            - redis
+    redis:
+        image: 'redis:7-alpine'
+        ports:
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'sail-redis:/data'
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - redis-cli
+                - ping
+            retries: 3
+            timeout: 5s
     pgsql:
         image: 'postgres:18-alpine'
         ports:
@@ -78,4 +94,6 @@ volumes:
     sail-pgsql:
         driver: local
     sail-minio:
+        driver: local
+    sail-redis:
         driver: local
