--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
     "require": {
         "php": "^8.2",
         "dedoc/scramble": "^0.13.11",
+        "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.13",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.31",
         "spiral/roadrunner-cli": "^2.7",
         "spiral/roadrunner-http": "^3.6",
         "tymon/jwt-auth": "^2.2"
