--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "dedoc/scramble": "^0.13.11",
         "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.43",
         "laravel/octane": "^2.13",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.31",
